MDEV-4520: Assertion `0' fails in Query_cache::end_of_result on concurrent drop event and event execution

If there is no net.vio then query cache cant't get data via net_real_write() so it is better just do not try to cache such query.